--- a/src/components/LAYOUT/Layout.module.css
+++ b/src/components/LAYOUT/Layout.module.css
@@ -1,5 +1,5 @@
 .background{
-    background-image: url('../../images2/tlo5.jpg');
+    background-image: url('../../images2/tlo6.jpeg');
     background-size: 40vh;
     background-repeat: repeat;
     position: absolute;
